basic exercise added

--- a/basic/bootstrap_template.html
+++ b/basic/bootstrap_template.html
@@ -11,7 +11,22 @@
     <title>My first 5 weeks at CodeFactory</title>
   </head>
   <body>
-    
+    <div class="navbar bg-dark">
+      <ul class="navbar">
+        <li class="nav-item active navbar-text p-2"><a href="#">Home</a></li>
+        <li class="nav-item active navbar-text p-2"><a href="#">About</a></li>
+        <div class="nav-item active navbar-text p-2 dropdown show">
+          <button class="btn btn-secondary dropdown-toggle bg-primary" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Team</button>
+          <div class="dropdown-menu">
+            <a href="" class="dropdown-item">Boss</a>
+            <a href="" class="dropdown-item">Maid</a>
+            <a href="" class="dropdown-item">Person</a>
+            <div class="dropdown-divider"></div>
+            <a href="" class="dropdown-item">All the others</a>
+          </div>
+        </li>
+      </ul>
+    </div>
     <div class="container">
      <p>My First 5 Weeks at CodeFactory</p>
     <p>
